 2012-06-12 14:32  paul_reeves 
   M builds/install/arch-specific/win32/FirebirdInstall_30.iss
Validate sysdba password entry

 2012-06-12 14:29  paul_reeves 
   M builds/install/arch-specific/win32/FirebirdInstallGUIFunctions.inc
   M builds/install/arch-specific/win32/FirebirdInstallSupportFunctions.inc
Misc

 2012-06-12 14:27  paul_reeves 
   M builds/install/arch-specific/win32/custom_messages.inc
Add a couple of new i18n strings for the innosetup installer.

 2012-06-11 09:34  paul_reeves 
   M builds/install/arch-specific/win32/FirebirdInstall_30.iss
Pass correct param to gsec

 2012-06-11 09:04  paul_reeves 
   D builds/install/arch-specific/win32/FirebirdInstall_20.iss
remove redundant file

 2012-06-07 11:43  alexpeshkoff 
   M builds/install/arch-specific/aix/Makefile.in
   M builds/install/arch-specific/aix/classic/rpmheader.txt.in
   M builds/install/arch-specific/aix/misc/postinstall.sh.in
   M builds/install/arch-specific/aix/misc/tarmaininstall.sh.in
   M builds/install/arch-specific/aix/misc/tarmainuninstall.sh.in
   M builds/install/arch-specific/freebsd/install.sh.in
   M builds/install/arch-specific/hpux/Makefile.in
   M builds/install/arch-specific/hpux/classic/tarmainInstall.sh.in
   M builds/install/arch-specific/hpux/classic/tarmainUninstall.sh.in
   M builds/install/arch-specific/linux/Makefile.in
   M builds/install/arch-specific/linux/misc/postinstall.sh.in
   M builds/install/arch-specific/linux/misc/tarMainUninstall.sh.in
   M builds/install/arch-specific/solaris/CS/pkginfo.in
   M builds/install/arch-specific/solaris/Makefile.in
   M builds/install/arch-specific/solaris/SS/pkginfo.in
   M builds/install/arch-specific/solx86gcc/Makefile.in
   M builds/posix/make.defaults
   M configure.in
Cleanup - no more separate classic/super builds support

 2012-06-07 10:08  paul_reeves 
   M builds/win32/run_all.bat
Add option to just build (default is to do make packages after build.)

 2012-06-07 10:06  paul_reeves 